--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
 		}
 	],
 	"require": {
-		"MattThommes/Global": "1.1",
-		"sunra/php-simple-html-dom-parser": "v1.5.0"
+		"MattThommes/Global": "1.1"
 	},
 	"minimum-stability": "dev"
 }
